# learnFastAPI

./: pyproject.toml
learnfastapi/: 10_file.py  11_error.py  12_exception_handler.py  13_common_param.py  14_oauth2_usnm_pwd.py  15_oauth2_jwt.py  16_middleware.py  17_db.py  19_background_task.py  20_static.py  2_def_order.py  3_enum.py  4_path_param.py  5_query.py  6_param_validation.py  7_multople_body.py  8_validate_responce.py  9_form.py
learnfastapi/18_router/: main.py
learnfastapi/18_router/routers/: items.py
learnfastapi/_21_test/: main.py
